# youtube

./: .gitignore  _eleven_voiceover.py  _utils.py  bouncing_dvd_logo.py  ellipsis.py  ellipsis_script.md  empty_list.py  empty_list_script.md  google_logo.py  manim_positions.py  microsoft_logo.py  progressing_graph.py  pyproject.toml  python-empty-list-parameters.md  python-empty-list-voiceover.md  raft_algorithm.py  text_create_animations.py  three_body_problem_logo.py  tuple_vs_list.py
analysis/: shorts_exp.ipynb  youtube_top_channels.ipynb
find-cmnd/: find_video.py
js-animations/: pnpm-lock.yaml
js-animations/motion-canvas/: package-lock.json  package.json
js-animations/motion-canvas/src/: project.ts
js-animations/motion-canvas/src/for-else/: end.tsx  example.py  forElse.tsx  intro.tsx  thumbnail.tsx
js-animations/motion-canvas/src/functools/: example.py  examples.md  fibonaci.py  funcTools.tsx  (+2 more)
js-animations/src/routes/: +page.svelte
one-minute-python/: create_list.py  tuple_comma.py
one-minute-python/list_tuple_dict/: list_tuple_dict.py
one-minute-python/split_vs_splitlines/: split_vs_splitlines.py  test.py
rust-py-loop/: fib  loop  loop.py  loop.rs
screen-recording/: vim-1.ts
slidev/slidev/: empty-list.md  instance.py  package-lock.json  package.json  slides.md  style.css  uno.config.ts
slidev/slidev/components/: ErrorAlert.vue  Typewriter.vue  YoutubeSubscribe.vue
slidev/slidev/setup/: shiki.ts
slidev/slidev/videos/: ending.md  one-minute-slide.md  vim-intro.md
slidev/slidev/voiceover/: ellipsis.md
utils/: code_transform.py
(+46 files in other folders)
