[tool.poetry]
name = "youtube"
version = "0.1.0"
description = ""
authors = ["mohit sharma <mohitlakshya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
manim = ">0.18.0"
manim-voiceover = "^0.3.7"
elevenlabs = "^0.2.27"
google-api-python-client = "^2.168.0"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
scipy = "^1.15.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
